--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,23 @@
-# Abhängigkeiten
-node_modules
-package-lock.json
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Produktions Build
-dist
-dist-ssr
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Logs
-logs
-*.log
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-
-# Editor Verzeichnisse und Dateien
-.vscode/*
-!.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Umgebungsvariablen
-.env
-.env.*
-!.env.example
-
-# Betriebssystem
-.DS_Store
-Thumbs.db
-
-# Vite
-.vite/
-*.local
-
-# Temporäre Dateien
-*.tmp
-*.temp
-.cache
-
-# Coverage Verzeichnis
-coverage
-
-# ESLint Cache
-.eslintcache
-
-# Optional: Prettier Cache
-.prettierrc.cache 
