--- a/package.json
+++ b/package.json
@@ -1,52 +1,48 @@
 {
-  "name": "vite-project",
+  "name": "elli-effekt",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "@studio-freight/lenis": "^1.0.42",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/gsap": "^1.20.2",
+    "@types/jest": "^29.5.14",
+    "cra-template-typescript": "1.2.0",
+    "gsap": "^3.12.7",
+    "lenis": "^1.1.20",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-scripts": "5.0.1",
+    "split-type": "^0.3.4",
+    "web-vitals": "^4.2.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "env": {
-      "browser": true, 
-      "es2021": true 
-    },
-    "extends": ["eslint:recommended", "plugin:react/recommended"],
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true 
-      },
-      "ecmaVersion": 12, 
-      "sourceType": "module" 
-    },
-    "rules": {
-      "no-console": "warn", 
-      "no-unused-vars": "warn", 
-      "eqeqeq": "error" 
-    }
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "prettier": {
-    "singleQuote": true, 
-    "trailingComma": "es5", 
-    "semi": false 
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all"
-  ],
   "devDependencies": {
-    "vite": "^5.0.0",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3"
   }
 }
