--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "cra-template-typescript": "1.2.0",
     "gsap": "^3.12.7",
     "lenis": "^1.1.20",
+    "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
     "split-type": "^0.3.4",
     "web-vitals": "^4.2.4"
