--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
     "split-type": "^0.3.4",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
