--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3"
   }
